--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "antd": "^3.10.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.4"
   },
   "scripts": {
@@ -23,6 +25,7 @@
     "not ie <= 11",
     "not op_mini all"
   ],
+  "proxy": "http://localhost:2000",
   "devDependencies": {
     "babel-plugin-import": "^1.9.1",
     "react-app-rewired": "^1.6.2"
