--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "proxy": "http://localhost:2000",
+  "proxy": "http://localhost:2000/api",
   "devDependencies": {
     "babel-plugin-import": "^1.9.1",
     "react-app-rewired": "^1.6.2"
